--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     <nav class="py-4 lg:py-9 px-4 lg:px-48" x-data="{ navOpen: false }">
         <div class="md:container sm:container mx-auto z-50 fixed top-0 right-0 left-0 px-4 lg:px-48 py-4 lg:py-9 bg-white">
             <div class="flex justify-between items-center bg-white">
-                <img src="../public/images/Logo.svg" alt="">
-                <img @click="navOpen = !navOpen" src="../public/images/toggle.svg" alt="" class="lg:hidden">
+                <img src="./public/images/Logo.svg" alt="">
+                <img @click="navOpen = !navOpen" src="./public/images/toggle.svg" alt="" class="lg:hidden">
                 <div class="order-2 hidden lg:block">
                     <ul class="flex gap-16">
                         <li class="text-second font-bold text-sm font-circular">
@@ -78,7 +78,7 @@
                     <p class="mb-8 md:mb-[43px] text-center lg:text-start text-primary opacity-50 text-base md:text-[18px] lg:text-[18px] lg:w-full font-inter md:w-3/4 mx-auto">Bersatu dalam Iman, bertumbuh bersama dalam kasih karunia Kristus.</p>
                 </div>
                 <div class="col-span-12 lg:col-span-8 order-1 lg:order-2 text-center">
-                    <img src="../public/images/hero.svg" class="w-full" alt="">
+                    <img src="./public/images/hero.svg" class="w-full" alt="">
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="container mx-auto px-11 py-12 lg:pt-[108px] lg:px-48">
             <div class="grid grid-cols-12 items-center">
                 <div class="col-span-12 lg:col-span-6 items-center">
-                    <img src="../public/images/tentang.svg" class="w-3/4 mx-auto" alt="">
+                    <img src="./public/images/tentang.svg" class="w-3/4 mx-auto" alt="">
                 </div>
                 <div class="col-span-12 lg:col-span-6">
                     <h1 class="mt-8 mb-6 font-bold text-primary text-[32px] md:text-[40px] lg:text-[44px] leading-tight text-center lg:text-start">Tentang Kami</h1>
@@ -113,7 +113,7 @@
                     <h1 class="mt-4 mb-9 font-bold text-primary text-[32px] md:text-[40px] lg:text-[44px] leading-tight text-center">Kegiatan DC Spirit Love</h1>
                 </div>
                 <div class="col-span-12 items-center">
-                    <img src="../public/images/galeri.svg" alt="" class="w-full mx-auto">
+                    <img src="./public/images/galeri.svg" alt="" class="w-full mx-auto">
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
                         <p class="mb-8 text-start text-white opacity-50 text-base md:text-[18px] lg:text-[18px] font-inter mx-auto">GBI El Shaddai, Jl. Prof. M.Yamin No.1A, Sungai Bangkong, Kec. Pontianak Kota, Kota Pontianak,    Kalimantan Barat 78116</p>
                     </div>
                     <div class="mb-8 flex items-center">
-                    <img src="../public/images/instagram.svg" alt="">
+                    <img src="./public/images/instagram.svg" alt="">
                     <p class="text-white opacity-50 text-base md:text-[18px] lg:text-[18px] font-inter pl-2">@dc.spiritlove</p>
                     </div>
                 </div>
